--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,18 @@ layout: base
       </article>
 
 
+      {% if page.tags.size > 0 %}
+        <div class="blog-tags">
+          Tags:
+          {% if site.link-tags %}
+          {% for tag in page.tags %}
+            <a href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
+          {% endfor %}
+          {% else %}
+            {{ page.tags | join: ", " }}
+          {% endif %}
+        </div>
+      {% endif %}
       {% if page.social-share %}
         {% include social-share.html %}
       {% endif %}
